# stock-trading-strategy

./: .gitignore  .sample.env  LICENSE  README.md  pyproject.toml
notebooks/: prices_check.ipynb  pricesdb_check.ipynb  template.ipynb  trade.ipynb  trade_rl.ipynb
scripts/: format.sh  lint.sh
sql/: create_table.sql
src/backtest/: simulator.py
src/data_collect/: adjust_price.py  create_table.sql  get_brands.py  get_divide_union.py  get_stockprice.py
src/strategy/: golden_core30.py  stock_ddqn.py  stockenv.py
