[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.19.2"
matplotlib = "^3.3.2"
seaborn = "^0.11.0"
flask = "^1.1.2"
ipython = "^7.18.1"
pandas = "^1.1.2"
jupyter = "^1.0.0"
scikit-learn = "^0.23.2"
db-sqlite3 = "^0.0.1"
pyquery = "^1.4.1"
selenium = "^3.141.0"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
pandas-highcharts = "^0.5.2"
bokeh = "^2.2.1"
japandas = "^0.5.1"
jpholiday = "^0.1.4"
sqlalchemy = "^1.3.19"
tqdm = "^4.50.0"
pfrl = "^0.1.0"
gym = "^0.17.3"
pandas_profiling = "^2.9.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
