[tool.poetry]
name = "pysen_"
version = "0.1.0"
description = ""
authors = [""]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
pandas = "^1.2.3"
jupyter = "^1.0.0"
ipython = "^7.22.0"
jupyterlab = "^3.0.12"
SQLAlchemy = "^1.4.4"
seaborn = "^0.11.1"
Flask = "^1.1.2"
scikit-learn = "^0.24.1"
selenium = "^3.141.0"
jpholiday = "^0.1.5"
pyquery = "^1.4.3"
tqdm = "^4.59.0"
beautifulsoup4 = "^4.9.3"
html5lib = "^1.1"
torch = "^1.8.1"
pfrl = "^0.2.1"
gym = "^0.18.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pysen = {version = "0.9.0", extras = ["lint"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pysen]
version = "0.9"
 
[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = true
[[tool.pysen.lint.mypy_targets]]
paths = ["."]

[tool.pysen.lint.source]
includes = ["."]
include_globs = ["**/*.template"]
excludes = [".venv/","mstock/"]